# numparquet

./: LICENSE  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-package.yml
numparquet/: __init__.py  numparquet.py
tests/: test_io.py
