[metadata]
name = numparquet
description = Serialization of numpy recarrays to parquet.
long_description = file: README.md
long_description_content_type = text/markdown
author = Eli Rykoff
url = https://github.com/erykoff/numparquet
author_email = erykoff@stanford.edu

[options]
packages = find:
python_requires = >=3.7
install_requires =
  numpy
  pyarrow
tests_require =
  pytest
  flake8
  pytest-flake8
zip_safe = True

[options.packages.find]
exclude =
  tests

[flake8]
max-line-length = 110
ignore = E133, E226, E228, N802, N803, N806, N812, N815, N816, W504
exclude =
  **/__init__.py,
  docs,
  build

[tool:pytest]
addopts = --flake8
flake8-ignore = E133 E226 E228 N802 N803 N806 N812 N815 N816 W503
